- GCE: Prevent grouped calendars to belong to categories used to create that calendars (Trello #1371)
- CGE: Fixed grouped calendars not showing in dropdown menu in customizer (Trello #1384)
- Dashboard: Reviewed access to menu options in dashboard for roles xtec_teacher and contributor (Trello #1354)
- wordpress-importer: Upgraded plugin from 0.6.1 to 0.6.3
- mu-common: Allow more attributes in embed tag in visual editor (Trello #1297)
- mu-common: Fixed default comment status. Restored default action about comment status parameter (Trello #1365)
- mu-common: Added Automatic creation of featured image (Imatge resum) (Trello #1284)
- xtec-stats: Fixed Javascript error in Safari in statistics page (Trello #1361)
- xtec-booking: Fixed size image in modal window with the booking details (Trello #1399)
- xtec-booking: Fixed styles in day view (Trello #1399)
- buddypress-docs: Tag searches use 'and' as a default condition. Changed text link accordingly (Trello #1368)


Changes 16.09.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.4 (Trello #1345)
- GCE: Updated from 2.2.5 (Legacy Google Calendar Events 2.4) to 3.1.2 (Simple Calendar - Google Calendar Plugin) (Trello #1034)
- GCE: Included fix for grouped calendars (Trello #1371)
- grup-classe: Removed option to select format of the calendar due to the changes in GCE v3.x (Trello #1034)
- New users: Fixed URL to change password, which was not being shown in email sent to new users
- blogger-importer: Fixed import of images (Trello #1340)
- xtec-booking: Added plugin for bookings of spaces or equipment (Trello #1166)
- xtec-booking: Included fix for bookings without start and finish hours (Trello #1373)
- Added role Professor (Trello #1166)
- Role Professor: Removed links to comments and tools (Trello #1354)
- Tools: Added custom tool boxes for timetables and events management. Removed bp and categories boxes (Trello #1342)