@@ -9,6 +9,7 @@ Work in progress
 - CGE: Fixed grouped calendars not showing in dropdown menu in customizer (Trello #1384)
 - Dashboard: Reviewed access to menu options in dashboard for roles xtec_teacher and contributor (Trello #1354)
 - wordpress-importer: Upgraded plugin from 0.6.1 to 0.6.3
+- agora-functions: agora-functions: Translated text to english and added translation to .po file (Trello #1394)
 - mu-common: Allow more attributes in embed tag in visual editor (Trello #1297)
 - mu-common: Fixed default comment status. Restored default action about comment status parameter (Trello #1365)
 - mu-common: Added Automatic creation of featured image (Imatge resum) (Trello #1284)
